--- a/app/src/main/res/layout/fragment_third_category2.xml
+++ b/app/src/main/res/layout/fragment_third_category2.xml
@@ -1,6 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    >
 
-</LinearLayout>
+    <RelativeLayout
+        android:id="@+id/category2_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="50.0dip"
+        android:layout_alignParentTop="true"
+        android:background="@color/background_red"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/head_goback"
+            style="@style/style_15_EBEBEB_BOLD"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/back_btn"
+            android:clickable="true"
+            android:gravity="center"
+            android:onClick="goBack"
+            />
+
+        <TextView
+            android:id="@+id/category2Title"
+            style="@style/style_18_BEBEBE_BOLD"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:text="二级分类" />
+    </RelativeLayout>
+
+    <!-- <TextView
+         android:id="@+id/categoryEmptyListTv"
+         style="@style/style_20_666666"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_below="@+id/category_layout"
+         android:layout_centerInParent="true"
+         android:text="加载中..."
+         android:visibility="visible" /> -->
+
+    <ExpandableListView
+        android:id="@+id/category2EList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottomBar"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/category2_layout"
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="3dp"
+        android:layout_marginTop="6dp"
+        android:background="@color/font_gray11"
+        android:cacheColorHint="#00000000"
+        android:childDivider="@color/cateory2_item"
+        android:divider="@color/cateory2_item"
+        android:dividerHeight="6dp"
+        android:fadingEdge="none"
+        android:listSelector="@drawable/index_item_bg" >
+    </ExpandableListView>
+
+</RelativeLayout>
