--- a/app/src/main/res/layout/fragment_first_product_detail.xml
+++ b/app/src/main/res/layout/fragment_first_product_detail.xml
@@ -32,11 +32,117 @@
             android:text="商品详情" />
     </RelativeLayout>
 
+    <FrameLayout
+        android:id="@+id/button_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/white">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/listview_41bg_normal_top"
+            android:padding="6.0dip"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp">
+
+
+            <TextView
+                android:id="@+id/shopcar_prdtoFav_text"
+                style="@style/style_16_FFFFFF"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/product_detail_shop_button"
+                android:clickable="true"
+                android:ellipsize="marquee"
+                android:gravity="center"
+                android:onClick="putIntoCollect"
+                android:text="收藏"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/textPutIntoShopcar"
+                style="@style/style_16_FFFFFF"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/product_detail_shop_button"
+                android:clickable="true"
+                android:gravity="center"
+                android:onClick="putIntoShopcar"
+                android:text="加入购物车"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/shopcar_prdtobuy_text"
+                style="@style/style_16_FFFFFF"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/product_detail_shop_button"
+                android:clickable="true"
+                android:gravity="center"
+                android:onClick="buyItNow"
+                android:text="立即购买"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+        <!--<RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/listview_41bg_normal_top"
+            android:padding="6.0dip"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp">
+
+            <TextView
+                android:id="@+id/textPutIntoShopcar"
+                style="@style/style_16_FFFFFF"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginLeft="30.0dip"
+                android:background="@anim/product_detail_shop_button"
+                android:clickable="true"
+                android:gravity="center"
+                android:onClick="putIntoShopcar"
+                android:text="加入购物车"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/shopcar_prdtoFav_text"
+                style="@style/style_16_FFFFFF"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="30dp"
+                android:background="@anim/product_detail_shop_button"
+                android:clickable="true"
+                android:ellipsize="marquee"
+                android:gravity="center"
+                android:onClick="putIntoCollect"
+                android:text="收藏"
+                android:textSize="14sp" />
+        </RelativeLayout>-->
+
+
+    </FrameLayout>
+
     <com.honliv.honlivmall.view.ScrollViewForViewPager
         android:id="@+id/selectedProductDitals"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@id/bottomBar"
+        android:layout_above="@id/button_layout"
         android:layout_below="@id/relTop"
         android:scrollbars="none">
 
@@ -350,111 +456,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/relTop"
         android:visibility="gone" />
-
-    <FrameLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@color/white">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/listview_41bg_normal_top"
-            android:padding="6.0dip"
-            android:paddingBottom="10dp"
-            android:paddingTop="10dp">
-
-
-            <TextView
-                android:id="@+id/shopcar_prdtoFav_text"
-                style="@style/style_16_FFFFFF"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/product_detail_shop_button"
-                android:clickable="true"
-                android:ellipsize="marquee"
-                android:gravity="center"
-                android:onClick="putIntoCollect"
-                android:text="收藏"
-                android:textSize="14sp" />
-
-            <TextView
-                android:id="@+id/textPutIntoShopcar"
-                style="@style/style_16_FFFFFF"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/product_detail_shop_button"
-                android:clickable="true"
-                android:gravity="center"
-                android:onClick="putIntoShopcar"
-                android:text="加入购物车"
-                android:textSize="14sp" />
-
-            <TextView
-                android:id="@+id/shopcar_prdtobuy_text"
-                style="@style/style_16_FFFFFF"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/product_detail_shop_button"
-                android:clickable="true"
-                android:gravity="center"
-                android:onClick="buyItNow"
-                android:text="立即购买"
-                android:textSize="14sp" />
-        </LinearLayout>
-
-        <!--<RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/listview_41bg_normal_top"
-            android:padding="6.0dip"
-            android:paddingBottom="10dp"
-            android:paddingTop="10dp">
-
-            <TextView
-                android:id="@+id/textPutIntoShopcar"
-                style="@style/style_16_FFFFFF"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_marginLeft="30.0dip"
-                android:background="@anim/product_detail_shop_button"
-                android:clickable="true"
-                android:gravity="center"
-                android:onClick="putIntoShopcar"
-                android:text="加入购物车"
-                android:textSize="14sp" />
-
-            <TextView
-                android:id="@+id/shopcar_prdtoFav_text"
-                style="@style/style_16_FFFFFF"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="30dp"
-                android:background="@anim/product_detail_shop_button"
-                android:clickable="true"
-                android:ellipsize="marquee"
-                android:gravity="center"
-                android:onClick="putIntoCollect"
-                android:text="收藏"
-                android:textSize="14sp" />
-        </RelativeLayout>-->
-
-
-    </FrameLayout>
 
 
 </RelativeLayout>
