--- a/app/src/main/res/layout/fragment_fifth_my_hxt_bind.xml
+++ b/app/src/main/res/layout/fragment_fifth_my_hxt_bind.xml
@@ -16,9 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/back_btn"
-            android:clickable="true"
-            android:gravity="center"
-            android:onClick="goBack" />
+            android:gravity="center" />
 
         <TextView
             android:id="@+id/title"
@@ -58,13 +56,12 @@
                 android:text="@string/card_no" />
 
             <com.honliv.honlivmall.view.MaterialTextField
+                android:id="@+id/et_cardno"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:hint="@string/hint_hxt_cardno"
-                android:text="9966113730190007442"
-                android:id="@+id/et_cardno" />
+                android:hint="@string/hint_hxt_cardno" />
         </LinearLayout>
 
         <LinearLayout
