--- a/app/src/main/res/layout/fragment_fifth_myhxt_detail.xml
+++ b/app/src/main/res/layout/fragment_fifth_myhxt_detail.xml
@@ -17,9 +17,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/back_btn"
-            android:clickable="true"
             android:gravity="center"
-            android:onClick="goBack" />
+    />
 
         <TextView
             style="@style/style_18_BEBEBE_BOLD"
@@ -148,9 +147,9 @@
     </LinearLayout>
 
     <com.gc.materialdesign.views.ButtonRectangle
+        android:id="@+id/unBind"
         style="@style/buttom"
         android:layout_below="@id/body"
-        android:onClick="unBind"
         android:text="@string/text_unbind"
         materialdesign:animate="false" />
 </RelativeLayout>
