修改bug剔除一些文件

--- a/app/src/main/res/layout/activity_order_submit_ok.xml
+++ b/app/src/main/res/layout/activity_order_submit_ok.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <FrameLayout
-        android:id="@id/fraHead"
+        android:id="@+id/fraHead"
         android:layout_width="fill_parent"
         android:layout_height="50dp"
         android:background="@color/background_red">
